# playground

./: .gitignore  Makefile  justfile
_template_/ansible/: setup_.yml  teardown.yml
aerospike/: README.md  pyproject.toml
aerospike/ansible/: setup.yml  setup_aerospike.yml  teardown.yml
aerospike/tests/: conftest.py  simple.lua  test_key_value.py
bitcoin_cashd/ansible/: Dockerfile  bitcoin.conf  setup.yml  teardown.yml
bitcoind/ansible/: Dockerfile  bitcoin.conf  setup.yml  teardown.yml
chronograf/: README.md
chronograf/ansible/: setup.yml  teardown.yml
clickhouse/: README.md
clickhouse/ansible/: setup.yml  setup_clickhouse.yml  teardown_clickhouse.yml
cockroachdb/: README.md  pyproject.toml
cockroachdb/ansible/: setup.yml  teardown.yml
cockroachdb/tests/: test_create_table.py
consul/ansible/: setup.yml  setup_consul.yml  teardown_consul.yml
consul/tests/: test_consul.py
cpython/multimodule_in_single_so/: README.md  build.sh  multi.c
dogecoind/: pyproject.toml
dogecoind/ansible/: Dockerfile  setup.yml  teardown.yml
elasticsearch/ansible/: setup.yml  teardown.yml
etcd/: pyproject.toml
etcd/ansible/: setup.yml  teardown_etcd.yml
etcd/tests/: test_kv.py
flink/: README.md  pyproject.toml
flink/ansible/: setup.yml  teardown.yml
go/module_for_python/: .gitignore  README.md  _foo.c  build.sh  foo.go
influxdb/ansible/: setup.yml  teardown.yml
litecoind/ansible/: Dockerfile  dogecoin.conf  litecoin.conf  (+2 more)
nats/: README.md  pyproject.toml
rabbitmq/: README.md
scylla/: README.md  pyproject.toml
victoria_metrics/: pyproject.toml
(+17 files in other folders)
