[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Andrey Torsunov", email = "andrey.torsunov@gmail.com"},
]
license-expression = "MIT"
dependencies = [
    "apache-flink~=1.15.2"
]
requires-python = ">=3.10"

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.1",
    "pytest-asyncio>=0.18.3",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
